Changed button names and calculator default dispaly value

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <main>
         <div class="grid-container">
-            <div class="display"></div>
-            <button class="twice" id="clear">CLEAR</button>
-            <button class="twice" id="delete"> DELETE</button>
+            <div class="display">0</div>
+            <button class="twice" id="clear">A/C</button>
+            <button class="twice" id="delete">Delete</button>
             <button class="num">7</button>
             <button class="num">8</button>
             <button class="num">9</button>
